Tue Apr 22 22:15:51 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (rb_io_statfs): need to define even if the system doesn't have
	  fstatfs(2).

	* test/ruby/test_file.rb (TestFile#test_statfs): skip if IO#stafs is not
	  implemented.

Tue Apr 22 19:32:48 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c: newly added a class File::Statfs. (experimental)

Tue Apr 22 08:22:33 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_malloc_increase): don't cause GC by malloc_increase
	  when memop type is MEMOP_TYPE_REALLOC.

	  GC at realloc is not well maintained.
	  We need a time to make it safe.
	  [ruby-dev:48117]

Tue Apr 22 06:54:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (objspace_malloc_increase): run full mark if 0x04 bit is
	  set in ruby_gc_stress.  [ruby-core:62103] [Feature #9761]

	* gc.c (objspace_malloc_increase): run GC after realloc not only
	  malloc and calloc by GC.stress.  [ruby-core:62103] [Feature #9761]

Mon Apr 21 19:12:20 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_coderange_scan_restartable): coderange is always
	  ENC_CODERANGE_VALID if the string is ASCII-8BIT and already has a non
	  ASCII character.

Mon Apr 21 19:02:44 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (coderange_scan): remove useless condition `p < e` after
	  search_nonascii.

	* string.c (rb_str_coderange_scan_restartable): ditto.

Mon Apr 21 18:55:21 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/-test-/string/coderange.c: add Bug::String.new#coderange_scan
	  to explicitly scan coderange.

Mon Apr 21 18:19:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (coderange_scan): remove unused logic.

	* string.c (rb_str_coderange_scan_restartable): ditto.

Mon Apr 21 14:11:48 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_putc): fix for non-ascii
	  encoding, like as IO#putc.  [ruby-dev:48114] [Bug #9765]

Sun Apr 20 12:57:15 2014  Masaya Tarui  <tarui@ruby-lang.org>
